<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/input_a"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/input_a"
        android:inputType="number" >
        <requestFocus/>
    </EditText>

    <EditText
        android:id="@+id/input_b"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/input_b"
        android:inputType="number" />
    
    <Button 
        android:id="@+id/button_increment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_increment" />
    
    <Button 
        android:id="@+id/button_addition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_addition" />
    
</LinearLayout>